--- a/stardustPlay/css/editarJogo.css
+++ b/stardustPlay/css/editarJogo.css
@@ -12,8 +12,7 @@
 
 .container_datagame input[type='text'], input[type='number'], select, textarea{
     all: unset;
-    color: var(--cor-terciaria);
-    border: 2px solid var(--cor-secundaria);
+    border: 2px solid var(--cor-terciaria);
     border-radius: 0.5em;
     padding-left: 0.5em;
     margin-bottom: 1em;
@@ -29,7 +28,7 @@ textarea{
 }
 
 .container_datagame input:focus, select:focus, textarea:focus{
-    border: 2px solid var(--cor-quinta);
+    border: 2px solid var(--cor-quarta);
 }
 
 .info_data select option{
@@ -62,7 +61,7 @@ textarea{
 }
 
 input[type="checkbox"]{
-    accent-color: var(--cor-secundaria);
+    accent-color: var(--cor-terciaria);
 }
 
 .ctn_logo_name{
@@ -113,7 +112,7 @@ input[type="checkbox"]{
     align-items: center; 
     border: 2px solid;
     border-radius: 1em;
-    color: var(--cor-quinta);
+    color: var(--cor-quarta);
     cursor: pointer;
     transition: 0.2s;
 }
@@ -128,15 +127,12 @@ input[type="checkbox"]{
 }
 
 .container_upload:hover{
-    color: var(--cor-quarta);
+    color: red;
     transition: 0.2s;
-}
-.container_upload:active{
-    color: var(--cor-quarta);
 }
 
 #mensage_tags{
-    color: var(--cor-quinta);
+    color: var(--cor-quarta);
     text-transform: inherit;
 }
 
@@ -167,10 +163,9 @@ input[type="checkbox"]{
 }
 
 .lbl_plataforma{
-    color: var(--cor-terciaria);
     cursor: pointer;
     padding: 0.5em 1em;
-    border: 2px inset var(--cor-secundaria);
+    border: 2px inset var(--cor-terciaria);
     border-radius: 1em;
     font-weight: 800;
 }
@@ -181,7 +176,7 @@ input[type='checkbox']{
 
 input[type='checkbox']:checked +label{
     color: var(--cor-primaria);
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-terciaria);
 }
 
 /*content_submit*/
@@ -204,23 +199,18 @@ input[type='checkbox']:checked +label{
     justify-content: center;
     padding: 0 5em;
 }
-.content_submit a{
-    color: var(--cor-primaria);
-    padding: 0.5em;
-    background-color: var(--cor-secundaria);
-    border-radius: 1em;
-}
+
 .content_submit input[type='submit']{
     all: unset;
     padding: 0.5em;
     border-radius: 1em;
-    background-color: var(--cor-quarta);
+    background-color: red;
     cursor: pointer;
 }
 
 hr{
     margin-top: 1em;
-    border: 1px solid var(--cor-secundaria);
+    border: 1px solid var(--cor-terciaria);
 
     width: 100%;
 }
@@ -235,6 +225,6 @@ hr{
 }
 
 .db_mensage{
-    color: var(--cor-quinta);
+    color: var(--cor-quarta);
     text-align: center;
 }
