--- a/stardustPlay/css/gameHub.css
+++ b/stardustPlay/css/gameHub.css
@@ -1,11 +1,44 @@
 .jogo_nome{
     font-family: var(--fonte-nome);
 }
+
+.swiper-button-next,
+.swiper-button-prev{
+    font-size: 2rem;
+    aspect-ratio: 1/1;
+    width: max-content;
+    color: black;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: var(--cor-terciaria);
+    transition: 0.1s ease-in-out;
+}
+
+.swiper-button-next:active,
+.swiper-button-prev:active{
+    transition: 0.1s ease-in-out;
+    transform: scale(0.9);
+}
+
+/* Customizando a seta no botão próximo */
+.swiper-button-next::after {
+    content: '';                          /* Seta personalizada */
+    font-size: 20px;
+  }
+  
+  /* Customizando a seta no botão anterior */
+  .swiper-button-prev::after {
+    content: '';
+    font-size: 20px;
+  }
+
+
 /*--------------------------------------------------------------*/
 .swiper-banner{
     width: 100%;
-    height: 80vh;
-    border-bottom: 2px solid var(--cor-secundaria);
+    /* height: 30vh; */
+    aspect-ratio: 16/8;
+    border-bottom: 2px solid var(--cor-terciaria);
 }
 
 .swiper-banner .swiper-slide{
@@ -17,41 +50,64 @@
     background-position: center;
 }
 .swiper-banner .swiper-pagination-bullet{
-    background: var(--cor-secundaria);
+    background: var(--cor-terciaria);
 }
 
 .banner-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    text-align: start;
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0, 0, 0, 0.918) 33%, rgba(0, 0, 0, 0.26) 66%, rgba(0, 0, 0, 0) 100%);
     flex-grow: 1;
-    padding: 5vh 50% 10vw 5vh;
+    padding: 5vh 55% 5vh 5vw;
     height: 100%;
-    gap: 0.5em;
+    gap: 0.7em;
 }
 .banner_mensagem{
-    color: var(--cor-quinta);
+    padding: 0.1em 0.3em;
+    background-color: var(--cor-quarta);
+    color: var(--cor-primaria);
 }
 .banner_nome{
     font-family: var(--fonte-nome);
+    font-size: 2.7rem;
     text-transform: uppercase;
 }
 .banner_slogan{
-    text-align: center;
+    font-size: 1.5rem;
     font-weight: 300;
 }
 .banner_preco{
-    color: var(--cor-secundaria);
+    font-size: 1.7rem;
+    color: var(--cor-quarta);
 }
 .banner_link{
     font-family: var(--fonte-nome);
     font-weight: 700;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    transition: 0.3s ease-in-out;
+}
+.banner_link:hover{
+    color: var(--cor-terciaria);
+}
+
+.banner_link:hover > i{
+    transform: translateX(4px);
+    transition: 0.2s ease-in-out;
 }
 
 /*--------------------------------------------------------------------------*/
+.subtitulo_categoria{
+    color: var(--cor-terciaria);
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 200;
+    font-family: var(--fonte-titulo);
+    text-transform: uppercase;
+    margin: 2em 0 0.5em;
+}
 
 .swiper-card .swiper-slide{
     display: flex;
@@ -63,7 +119,7 @@
     cursor: pointer;
 }
 .swiper-card .swiper-slide:hover{
-    border: 2px solid var(--cor-secundaria);
+    border: 2px solid var(--cor-terciaria);
     transition: 0.3s;
 }
 
@@ -79,7 +135,6 @@
     justify-content: center;
     margin: 0 12vw 0;
 }
-
 .swiper-grupo .swiper-slide{
     display: flex;
     flex-direction: column;
@@ -87,7 +142,7 @@
     cursor: pointer;
 }
 .swiper-grupo .swiper-slide:hover > .jogo_image{
-    border-bottom: 3px solid var(--cor-secundaria);
+    border-bottom: 3px solid var(--cor-terciaria);
     transition: 0.3s;
 }
 
@@ -115,6 +170,6 @@
     cursor: pointer;
 }
 .swiper-poster .swiper-slide:hover > .poster_img{
-    border-bottom: 3px solid var(--cor-secundaria);
+    border-bottom: 3px solid var(--cor-terciaria);
     transition: 0.3s;
 }
