--- a/stardustPlay/css/navbar.css
+++ b/stardustPlay/css/navbar.css
@@ -1,4 +1,4 @@
-header{
+header {
     display: flex;
     justify-content: space-between;
     position: sticky;
@@ -7,34 +7,70 @@ header{
     width: 100vw;
     padding: 0 1em;
     align-items: center;
-    border-bottom: 2px solid var(--cor-secundaria);
+    border-bottom: 2px solid var(--cor-terciaria);
     background-color: var(--cor-primaria-glass);
     backdrop-filter: blur(20px);
     font-family: var(--fonte-titulo);
 }
-.link_index{
+
+.link_index {
     display: flex;
     align-items: center;
     font-family: var(--fonte-titulo);
     font-weight: 200;
 }
-.link_logo{
+
+.link_logo {
     height: 3em;
     margin: 0.3em;
 }
 
-.lista_menu{
+.lista_menu {
     display: flex;
     list-style: none;
     gap: 1em;
     font-family: var(--fonte-nome);
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: 500;
 }
-.lista_menu_item:first-child{
+
+
+
+.lista_menu_item{
     position: relative;
+    cursor: pointer;
+    font-size: 0.9em;
 }
-    
+
+.lista_menu_item::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 0%;
+    bottom: -10%;
+    left: 0;
+    border-radius: 1em;
+    background-color: var(--cor-terciaria);
+    transition: 0.3s ease-in-out;
+}
+.lista_menu_item:hover::after{
+    width: 100%;
+    transition: 0.3s ease-in-out;
+}
+
+#lbl_categoria:checked ~ .lista_categorias_navbar{
+    display: flex;
+    transition: 0.3s;
+}
+#lbl_categoria:checked + label > i{
+    transform: rotate(90deg);
+    transition: 0.3s;
+}
+
+#lbl_categoria + label i{
+    transition: 0.3s;
+}
+
 .lista_categorias_navbar{
     display: none;
     flex-direction: column;
@@ -46,27 +82,27 @@ header{
     overflow: hidden;
 }
 
-.lista_categorias_ancora{
+.lista_categorias_ancora {
     display: flex;
-    padding: 0.3em 1em;
-    font-size: 1rem;
+    padding: 0.3em 1em !important;
 }
-.lista_categorias_ancora:hover{
+
+.lista_categorias_ancora:hover {
     transition: 0.3s;
     color: var(--cor-primaria);
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-terciaria);
 }
 
 /*------------------------------------------------------------------------*/
-.image_logado{
-    border: 2px solid var(--cor-secundaria);
+.image_logado {
+    border: 2px solid var(--cor-terciaria);
     border-radius: 50%;
     height: 3em;
     margin: 0.3em;
     cursor: pointer;
 }
 
-.perfil_card{
+.perfil_card {
     position: absolute;
     top: calc(100% + 1em);
     right: 1em;
@@ -78,65 +114,70 @@ header{
     transition: 3s;
 }
 
-.perfil_nome_usuario{
+.perfil_nome_usuario {
     font-family: var(--fonte-nome);
     text-align: center;
     padding: 0 1em;
 }
-.perfil_ocupacao_usuario{
-    color: var(--cor-secundaria);
+
+.perfil_ocupacao_usuario {
+    color: var(--cor-terciaria);
     text-align: center;
     padding: 0 5em;
     margin-bottom: 1em;
 }
 
-.perfil_lista{
+.perfil_lista {
     display: flex;
     flex-direction: column;
     list-style: none;
 }
 
-.perfil_lista_item{
+.perfil_lista_item {
     border-top: 1px solid;
 }
-.perfil_lista_item:hover{
+
+.perfil_lista_item:hover {
     transition: 0.3s;
-    color: var(--cor-secundaria);
+    color: var(--cor-terciaria);
 }
 
-.perfil_link{
+.perfil_link {
     display: flex;
     align-items: center;
     gap: 1em;
     padding: 0.3em 0 0.3em 0.5em;
 }
-.perfil_link:hover{
-    color: var(--cor-secundaria);
+
+.perfil_link:hover {
+    color: var(--cor-terciaria);
 }
 
-.perfil_link i{
+.perfil_link i {
     padding: 0.3em;
     border-radius: 50%;
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-terciaria);
     color: var(--cor-primaria);
 }
+
 /*------------------------------------------------------------------------*/
 
-.container3{
+.container3 {
     display: flex;
     align-items: center;
     gap: 1em;
 }
-.container3 input[type="search"]{
+
+.container3 input[type="search"] {
     all: unset;
-    border: 2px solid var(--cor-secundaria);
+    border: 2px solid var(--cor-terciaria);
     border-radius: 0.5em;
     padding: 0.3em 0.5em;
     font-size: 0.9rem;
 }
 
-.link_login{
-    border: 1px solid var(--cor-secundaria);
+.link_login {
+    border: 1px solid var(--cor-terciaria);
     border-radius: 2em;
     padding: 0.5em;
     font-size: 14px;
@@ -144,7 +185,8 @@ header{
     align-items: center;
     gap: 0.5em;
 }
-.link_login i{
-    color: var(--cor-secundaria);
+
+.link_login i {
+    color: var(--cor-terciaria);
     font-size: 1.5rem;
 }
