--- a/stardustPlay/css/pagListar.css
+++ b/stardustPlay/css/pagListar.css
@@ -22,19 +22,21 @@
     width: 100%;
     aspect-ratio: 2/3;
     border: 3px solid transparent;
+    border-radius: 1.5em 1.5em 0 0;
     transition: 0.2s;
 }
 .card_jogo:hover > img{
-    border-bottom: 3px solid var(--cor-secundaria);
+    border-bottom: 3px solid var(--cor-terciaria);
     transition: 0.2s;
 }
 
 .jogo_nome{
+    font-size: 1.1rem;
     font-family: var(--fonte-nome);
 }
 
 .jogo_preco{
-    color: var(--cor-secundaria);
+    color: var(--cor-terciaria);
 }
 
 .container_plataformas{
