--- a/stardustPlay/css/gameHub.css
+++ b/stardustPlay/css/gameHub.css
@@ -37,7 +37,10 @@
 .swiper-banner{
     width: 100%;
     /* height: 30vh; */
-    aspect-ratio: 16/8;
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     border-bottom: 2px solid var(--cor-terciaria);
 }
 
@@ -103,7 +106,7 @@
     color: var(--cor-terciaria);
     text-align: center;
     font-size: 1.5rem;
-    font-weight: 200;
+    font-weight: 500;
     font-family: var(--fonte-titulo);
     text-transform: uppercase;
     margin: 2em 0 0.5em;
