--- a/stardustPlay/css/navbar.css
+++ b/stardustPlay/css/navbar.css
@@ -100,6 +100,11 @@ header {
     height: 3em;
     margin: 0.3em;
     cursor: pointer;
+    transition: 0.3s;
+}
+.image_logado:hover{
+    transform: scale(0.9);
+    transition: 0.3s;
 }
 
 .perfil_card {
