--- a/stardustPlay/css/pagPerfil.css
+++ b/stardustPlay/css/pagPerfil.css
@@ -3,14 +3,13 @@
     flex-direction: column;
     gap: 1em;
     padding: 5vh 5vw;
-    width: 100vw;
-    height: 100vh;
+    margin-bottom: 3em;
 }
 .perfil-user {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-secundaria);
     border-radius: 2em;
     gap: 1em;
     width: 100%;
@@ -45,9 +44,41 @@
 .user_perfil{
     color: var(--cor-quarta);
     border: 2px solid;
+    border-radius: 0.5em;
+    padding: 0.5em;
     font-weight: 500;
     flex-grow: 1;
     text-align: center;
+}
+
+.modal-editar{
+    position: fixed;
+    display: none;
+    top: 50vh;
+    left: 50vw;
+    transform: translateX(-50%) translateY(-50%);
+    background-color: var(--cor-primaria);
+    border-radius: 2em;
+    z-index: 20;
+    padding: 3em;
+    height: 70vh;
+    width: 80vw;
+    border: 2px solid var(--cor-terciaria);
+}
+.modal_sair{
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+    font-size: 2rem;
+    color: var(--cor-terciaria);
+    cursor: pointer;
+}
+.modal_sair:active{
+    color: red;
+}
+
+#check-edit:checked + .modal-editar{
+    display: flex;
 }
 
 .user_foto {
@@ -89,14 +120,13 @@
     flex-direction: column;
     flex-grow: 1;
     height: 0;
+    gap: 0.7em;
 }
+
 .container_jogos{
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
-}
-.container_jogos::-webkit-scrollbar{
-    display: none;
 }
 
 .card-jogo{
@@ -109,7 +139,7 @@
     padding: 0.5em;
     border-radius: 1em;
     border: 1px solid transparent;
-    background: var(--cor-primaria);
+    background: var(--cor-secundaria);
     cursor: pointer;
     transition: 0.3s;
 }
@@ -123,11 +153,17 @@
     color: var(--cor-terciaria);
     transition: 0.3s;
 }
+.card-jogo:hover .card-jogo_image{
+    transform: translateX(2px) translateY(2px);
+    transition: 0.5s;
+}
 
 .card-jogo_image{
     aspect-ratio: 1/1;
     height: 20vh;
     border-radius: 1em;
+    box-shadow: 3px 3px 5px black;
+    background-color: black;
 }
 
 .card-jogo_info{
